--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+code {
+  counter-reset: line;  
+}
+ 
+code > .line::before {
+  counter-increment: line;
+  content: counter(line);
+ 
+  /* Other styling */
+  display: inline-block;
+  width: 1rem;
+  margin-right: 1rem;
+  text-align: right;
+  color: gray;
+}
+ 
+code[data-line-numbers-max-digits="2"] > .line::before {
+  width: 2rem;
+}
+ 
+code[data-line-numbers-max-digits="3"] > .line::before {
+  width: 3rem;
+}
