--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+  body {
+    @apply bg-neutral-950 text-neutral-100;
+  }
+}
 
 code {
   counter-reset: line;  
